Bug 301448 - Only email addresses are saved to "Recent Addresses", full names are not
Summary: Only email addresses are saved to "Recent Addresses", full names are not
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.2.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-08 14:03 UTC by Tamás Németh
Modified: 2024-03-14 09:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Németh 2012-06-08 14:03:26 UTC
I'd like if kmail saved the fullname of each recipient not only her/his email. Anyway I can add the full name manually by editing the list of recent addresses but it's inconvenient.

Reproducible: Always

Steps to Reproduce:
1. Send a mail to someone with fullname/email, eg: "John Doe <johndoe@example.com>"
2. Start composing another mail, and start typing the recipient starting with: jo
Actual Results:  
Only the email address (johndoe@example.com) is autocompleted.

Expected Results:  
The full original recipient address (ie: Name and email) should be included in autocompletion. It would be even better if the behaviour were configurable.
Comment 1 Volker Kuhlmann 2013-08-13 23:37:07 UTC
Problem exists with kmail2 4.10.5, openSUSE 12.3 rpms.
Problem did not exist with kmail 1.x.
Comment 2 Volker Kuhlmann 2013-08-14 00:42:22 UTC
bug#283991 is a duplicate of this
Comment 3 Denis Kurz 2016-09-24 18:20:43 UTC
This bug has only been reported for versions before 4.14, which have been unsupported for at least two years now. Can anyone tell if this bug still present?

If noone confirms this bug for a Framework-based version of kmail2 (version 5.0 or later, as part of KDE Applications 15.12 or later), it gets closed in about three months.
Comment 4 Bogdan Mihaila 2016-09-25 09:59:45 UTC
Hi

Already commented on the duplicate Bug of this but here again.
Confirming that the bug still exists in KMail2. Here the version info:
KMail 5.2.3 
KDE Frameworks 5.24.0
Qt 5.6.1
Kubuntu 16.04
Comment 5 Christophe Marin 2016-09-25 11:10:29 UTC
Thanks for the feedback.
Comment 6 Bug Janitor Service 2024-03-12 23:11:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/messagelib/-/merge_requests/191
Comment 7 Carl Schwan 2024-03-14 09:32:35 UTC
Git commit 3e7bf509b90648a32ba91114e0afeb90347d363b by Carl Schwan.
Committed on 14/03/2024 at 09:20.
Pushed by carlschwan into branch 'master'.

Save recent address with full name

We support doing this in PimCommon::RecentAddresses and this is a bit
nicer to remember the contact name as the email address might not
contains the name of the recipient.

M  +9    -9    messagecomposer/src/composer/composerviewbase.cpp

https://invent.kde.org/pim/messagelib/-/commit/3e7bf509b90648a32ba91114e0afeb90347d363b