Save recent address with full name

We support doing this in PimCommon::RecentAddresses and this is a bit
nicer to remember the contact name as the email address might not
contains the name of the recipient.

BUG: 301448